@@ -1,3 +1,6 @@
+2006-06-19  Brian Matherly  <brian@gramps-project.org>
+	* src/Mime/_WinMime.py: Get application description from registry
+
 2006-06-19  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_Relationship.py: handle person set to None
 	* src/ViewManger.py: try tabs on the side
